feat(student): get me implemented
